--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,61 +2,97 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #28262C;
+    background-color: #a6b2ec;
 }
 
 .title {
     font-size: 2rem;
     text-align: center;
     font-family: Helvetica;
-    color: #EEEEEE;
+    color: #080c25;
     margin-top: 1rem;
 }
 
 .search-box {
+    padding: 50px;
+    text-align: center;
     margin-top: 1rem;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.20);
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-text {
     display: inline;
     margin-right: 0.5rem;
-    margin-left: 15rem;
-    color: #EEEEEE;
+    color: #080c25;
     font-size: 1.2rem;
     font-family: helvetica;
-    margin-bottom: 1rem;
 }
 
 .search-input {
-    display: inline-block;
-    margin-right: 30%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.10);
+    display: inline;
     padding: 5px;
-    margin-bottom: 1rem;
-    width: 20%;
+    width: 10%;
     outline: none;
     text-align: center;
+    border: 2px solid #3070e7a1;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.search-input:hover, .search-input:focus {
+    border: 2px solid #3070e7;
 }
 
 .look-for-bank {
-    position: absolute;
-    right: 22%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.10);
+    display: inline;
+    margin-left: 0.5rem;
     padding: 5px;
     width: 100px;
-    background-color: #696773;
-    color: #EEEEEE;
-    border: 2px solid #EEEEEE;
-    border-radius: 3px;
+    background-color: #3071e7;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    border-radius: 5px;
     transition: 0.3s;
     cursor: pointer;
 }
 
 .look-for-bank:hover {
-    background-color: #EEEEEE;
-    color: #696773;
-    border: 2px solid #696773;
+    background-color: #FFFFFF;
+    color: #3071e7;
+    border: 2px solid #3071e7;
+}
+
+.all-banks {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.10);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    padding: 9px;
+    width: 100px;
+    background-color: #3070e7a1;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    border-radius: 5px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.all-banks:hover {
+    background-color: #FFFFFF;
+    color: #3070e7a1;
+    border: 2px solid #3070e7a1;
 }
 
 .table-container {
@@ -66,9 +102,13 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    height: 60vh;
+    max-height: 60vh;
+    min-height: fit-content;
     overflow-y: auto;
     overflow-x: auto;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.40);
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
 }
 
 .table {
@@ -78,63 +118,77 @@ body {
   background-color: #696773;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.45);
   font-family: Helvetica;
-  border: 2px solid #363946;
 }
 
-.table thead tr {
-    background-color: #5c6469;
-    color: #EEEEEE;
+.table thead tr th {
+    background-color: #161e35;
+    color: #FFFFFF;
     text-align: center;
     font-weight: bold;
-    border: 2px solid #363946;
+    border-right: 1px solid #FFFFFF;
 }
 
 .table tbody tr td {
     text-align: center;
-    background-color: #696773;
-    color: #EEEEEE;
-    border-bottom: 2px solid #363946;
+    background-color: #a6b0ec7a;
+    color: #FFFFFF;
+    border-right: 1px solid #FFFFFF;
 }
 
-.table th, .table td {
+.table thead th, .table tbody td {
     padding: 15px 15px;
-    border-right: 2px solid #363946;
+    border-bottom: 1px solid #FFFFFF;
 }
 
 @media screen and (max-width: 1260px) {
+
+    .table-container {
+        width: 95%;
+    }
+
+    .search-box {
+        width: 95%;
+    }
     
     .search-text {
         display: block;
-        margin-right: 0 !important;
-        margin-left: 0 !important;
-        text-align: center !important;
-        color: #EEEEEE;
-        font-size: 1.2rem;
+        margin: 0;
+        font-size: 1.1rem;
         font-family: helvetica;
         margin-bottom: 1rem;
     }
     
     .search-input {
         display: block;
-        margin-left: auto;
-        margin-right: auto !important;
-        padding: 5px;
         margin-bottom: 1rem;
         margin-top: 1rem;
-        min-width: 50%;
-        outline: none;
-        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        min-width: 60%;
+        padding: 10px;
     }
     
     .look-for-bank {
-        position: static;
-        right: none !important;
         display: block;
         margin-left: auto;
         margin-right: auto;
-        padding: 5px;
+        padding: 10px;
         width: 100px;
     }
+}
+
+.table-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.table-container::-webkit-scrollbar-track {
+    background: #a6b2ec;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background-color: #3071e7;
+    border-radius: 20px;
+    border: 1px solid #a6b2ec;
 }
 
 /* Removing the little arrows from the input number */
