--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -203,3 +203,37 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+/* CSS for loading spinner */
+.loading {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+.loading--full-height {
+    align-items: center;
+    height: 100%;
+}
+
+.loading::after {
+    content: "";
+    width: 50px;
+    height: 50px;
+    border: 5px solid #FFFFFF;
+    border-top-color: #3071e7;
+    border-radius: 50%;
+    transform: rotate(0.16turn);
+    animation: loading 1s ease infinite;
+}
+
+@keyframes loading {
+    /* Safari support */
+    from {
+        transform: rotate(0turn);
+    }
+
+    to {
+        transform: rotate(1turn);
+    }
+}
